--- a/Samuel/index.html
+++ b/Samuel/index.html
@@ -18,11 +18,19 @@
                 <li><a href="#">Contacts</a></li>
             </ul>
         </div>
+        <div class="intro">
+            <h1>Hi, My name is Samuel</h1>
+            <p>I am A creative web developer based in Nairobi,
+         specializing in Frontend web Development.
+          I build clean, appealing, and functional websites 
+          which comply with the latest web standards.</p>
+        </div>
     </section>
 
     <section class="section-two">
         <div class="about">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/3019455/pexels-photo-3019455.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" height="240px" width="250px" alt="">
+        </div>
             <div class="me">
                 <p> I am a responsible and a diligent young man.
                 I have been pursuing Finance at Strathmore University
@@ -36,7 +44,6 @@
         that adding a prime skill such as coding is one of the prerequisites 
          in addition to complement my finance knowledge</p>
             </div>
-        </div>
     </section>
 
     <section class="section-three">
