--- a/Samuel/index.html
+++ b/Samuel/index.html
@@ -47,33 +47,29 @@
     </section>
 
     <section class="section-three">
-        <div class="projects">
-            <ul>
-                <li>
-                    <a href="#">A Simple Calculator</a>
-                </li>
-                <li>
-                    <a href="#">A Movie Review App</a>
-                </li>
-                <li>
-                    <a href="#">A Food Recipe</a>
-                </li>
-                <li>
-                    <a href="#">A Shopping Cart</a>
-                </li>
-            </ul>
-        </div>
+                    <div class="projects">
+                        <div class="pro-one img">
+                            <a href="#"><img src="1.jpeg" alt=""></a>
+                        </div>
+                        <div class="pro-two img">
+                            <a href="#"><img src="2.jpeg" alt=""></a>
+                        </div>
+                        <div class="pro-three img">
+                            <a href="#"><img src="3.jpeg" alt=""></a>
+                        </div>
+                        <div class="pro-four img">
+                            <a href="#"><img src="4.jpeg" alt=""></a>
+                        </div>
+                    </div>
     </section>
 
     <section class="section-four">
-        <div class="contacts">
-            <h1><em>Contact Me</em></h1>
+                <h1><em>Contact Me</em></h1>
             <ul>
                 <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fab fa-github"></i></a></li>
             </ul>
-        </div>
     </section>
 
     <section class="footer">
